k8s/spring.service.yml
kind: Service
apiVersion: v1
metadata:
  name: spring-service
spec:
  selector:
    app: spring
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
