k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: all-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /spring
        backend:
          serviceName: spring-service
          servicePort: 80
